ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ntd
spec:
  # ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-svc-frontend
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todo-svc-backend
            port:
              number: 5000
